update sdoc translate

--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -347,6 +347,7 @@
   "Icon_and_text_Link": "Icon and text Link",
   "Card": "Card",
   "Select_sdoc_document": "Select sdoc document",
+  "Select_file": "Select file",
   "Local_file": "Local file",
   "Internal_server_exec_operations_error": "An exception occurred on the server, please refresh the page and try again",
   "Failed_to_sync_with_server_operations": "Synchronization with the server failed, please refresh the page",
@@ -362,5 +363,6 @@
   "No_changes": "No changes",
   "Title": "Title",
   "Subtitle": "Subtitle",
-  "Link_sdoc": "Link sdoc"
+  "Link_sdoc": "Link sdoc",
+  "Link_file": "Link file"
 }
