--- a/media/sdoc-editor/locales/fr/sdoc-editor.json
+++ b/media/sdoc-editor/locales/fr/sdoc-editor.json
@@ -1,10 +1,10 @@
 {
   "Bold": "Gras",
   "Italic": "Italique",
-  "Underline": "Underline",
+  "Underline": "Souligné",
   "Strikethrough": "Barré",
-  "Superscript": "Superscript",
-  "Subscript": "Subscript",
+  "Superscript": "Exposant",
+  "Subscript": "Indice",
   "Inline_code": "Code",
   "Header_one": "Titre 1",
   "Header_two": "Titre 2",
@@ -16,22 +16,22 @@
   "Quote": "Blockquote",
   "Ordered_list": "Liste ordonnée",
   "Unordered_list": "Liste non ordonnée",
-  "Check_list_item": "Check list item",
-  "Insert_image": "Insert image",
-  "Insert_formula": "Insert formula",
+  "Check_list_item": "Élément de la liste de vérification",
+  "Insert_image": "Insérer une image",
+  "Insert_formula": "Insérer formule",
   "Formula": "Formule",
-  "Insert_file": "Insert file",
+  "Insert_file": "Insérer un fichier",
   "Code": "Ligne de code",
-  "Code_block": "Code block",
-  "Insert_link": "Insert link",
-  "Insert_table": "Insert table",
-  "Valid_values_for_rows_and_columns": "Valid values for the number of rows and columns are 0 to 50",
+  "Code_block": "Bloc de code",
+  "Insert_link": "Insérer un lien",
+  "Insert_table": "Insérer un tableau",
+  "Valid_values_for_rows_and_columns": "Les valeurs valides pour le nombre de lignes et de colonnes sont comprises entre 0 et 50.",
   "Save": "Sauvegarder",
   "More": "Plus",
   "Invalid_url": "L'adresse n'est pas valide.",
   "Link_address": "Adresse du lien",
   "Image_address": "Adresse de l'image",
-  "Submit": "Submit",
+  "Submit": "Soummettre",
   "Cancel": "Annuler",
   "Switch_to_plain_text_editor": "Basculer en éditeur de texte plein",
   "Switch_to_rich_text_editor": "Basculer en éditeur de texte riche",
@@ -39,11 +39,11 @@
   "Help": "Aide",
   "Column": "Colonne",
   "Row": "Ligne",
-  "Delete_table": "Delete table",
-  "Delete_row": "Delete row",
-  "Delete_column": "Delete column",
-  "Insert_row": "Insert row",
-  "Insert_column": "Insert column",
+  "Delete_table": "Supprimer le tableau",
+  "Delete_row": "Supprimer la ligne",
+  "Delete_column": "Supprimer la colonne",
+  "Insert_row": "Insérer une ligne",
+  "Insert_column": "Insérer une colonne",
   "Set_align": "Ajuster l'alignement",
   "Left": "Gauche",
   "Center": "Centrer",
@@ -58,7 +58,7 @@
   "Copy_internal_link": "Le lien interne a été copié dans le presse-papiers.",
   "Internal_link_desc": "Un lien interne est un lien vers un fichier ou un dossier accessible en lecture par un utilisateur.",
   "Share": "Partager",
-  "Share_link": "Share link",
+  "Share_link": "Lien de partage",
   "Generate": "Créer",
   "Add_password_protection": "Ajouter un mot de passe",
   "Password": "Mot de passe",
@@ -81,33 +81,33 @@
   "Insert_network_image": "Insérer une image du réseau",
   "Upload_local_image": "Insérer une image locale",
   "Add_link": "Ajouter un lien",
-  "File_history": "File history",
-  "History_version": "History versions",
-  "Back_to_viewer": "Back to viewer",
+  "File_history": "Historique du fichier",
+  "History_version": "Historique des versions",
+  "Back_to_viewer": "Retour à l'afficheur",
   "Link_title": "Titre du lien",
   "Local_draft": "Brouillon local",
   "Use_draft": "Utiliser le brouillon",
   "Delete_draft": "Supprimer le brouillon",
   "You_have_an_unsaved_draft_do_you_like_to_use_it": "Vous avez un brouillon qui n'est pas sauvegardé. Voulez-vous l'utiliser ?",
   "Local_draft_saved": "Brouillon local sauvegardé",
-  "New_draft": "New draft",
-  "View_draft": "View draft",
+  "New_draft": "Nouveau brouillon",
+  "View_draft": "Voir le brouillon",
   "Publish": "Publier",
   "This_file_has_a_draft": "Ce fichier possède un brouillon.", 
   "Delete": "Supprimer",
   "Reply": "Répondre",
   "Comment": "Commentaire",
   "Comments": "Commentaires",
-  "All_comments": "All comments",
-  "Resolved_comments": "Resolved comments",
-  "Unresolved_comments": "Unresolved comments",
-  "Total_1_comment": "Total 1 comment",
-  "Total_count_comments": "Total {{count}} comments",
+  "All_comments": "Tous les commentaires",
+  "Resolved_comments": "Commentaires traités",
+  "Unresolved_comments": "Commentaires non traités",
+  "Total_1_comment": "Total 1 commentaire",
+  "Total_count_comments": "Total des commentaires {{count}}",
   "Add_a_comment": "Ajouter un commentaire",
   "No_comment_yet": "Aucun commentaire disponible",
   "Mark_as_Resolved": "Marquer com pris en compte",
-  "Resubmit": "Resubmit",
-  "Resubmitted": "Resubmitted",
+  "Resubmit": "Resoumettre",
+  "Resubmitted": "Soumis à nouveau",
   "Ask_for_review": "Demande d'un avis",
   "Review_already_exists": "Un avis existe déjà.",
   "View_review": "Voir l'avis",
@@ -117,8 +117,8 @@
   "This_file_is_in_review_stage": "Ce fichier est à l'état d'avis.",
   "This_file_has_been_updated": "Ce fichier à été mis à jour.",
   "Refresh": "Rafraichir",
-  "Related_files": "Related files",
-  "Related_file": "Related file",
+  "Related_files": "Fichiers associés",
+  "Related_file": "Fichier associé",
   "No_tags": "Pas de tag",
   "Date": "Date",
   "Participants": "Participants",
@@ -139,10 +139,10 @@
   "Insert_library_image": "Insérer une image d‘une bibliothèque",
   "Size": "Taille",
   "Location": "Emplacement",
-  "Last_update": "Last update",
+  "Last_update": "Dernière mise à jour",
   "Tags": "Tags",
   "Add_participants": "Ajouter des participants",
-  "Clear_format": "Clear format",
+  "Clear_format": "Sans formatage",
   "MarkdownLint": {
     "missing_h1": {
       "description": "Il n'y a pas de h1 dans le document.",
@@ -227,140 +227,142 @@
       }
     ]
   },
-  "The_link_address_is_required": "The link address is required.",
-  "The_link_title_is_required": "The link title is required.",
-  "The_link_address_is_invalid": "The link address is invalid, please enter a correct connection address.",
-  "All_changes_saved": "All changes saved",
+  "The_link_address_is_required": "L'adresse du lien est obligatoire.",
+  "The_link_title_is_required": "Le titre du lien est obligatoire.",
+  "The_link_address_is_invalid": "L'adresse du lien n'est pas valide, veuillez saisir une adresse de connexion correcte.",
+  "All_changes_saved": "Tous les changements sont enregistrés",
   "Saving": "Sauvegarde ...",
-  "Collaborators": "Collaborators",
-  "Online_members": "Online members",
-  "Me": "me",
-  "Server_is_not_connected_Operation_will_be_sent_to_server_later": "Server is not connected. Operation will be sent to server later.",
-  "Server_is_disconnected_Reconnecting": "Server is disconnected. Reconnecting...",
-  "Server_is_reconnected": "Server is reconnected.",
-  "Outline": "Outline",
-  "Headings_you_add_to_the_document_will_appear_here": "Headings you add to the document will appear here",
+  "Collaborators": "Collaborateurs",
+  "Online_members": "Membres en ligne",
+  "Me": "moi",
+  "Server_is_not_connected_Operation_will_be_sent_to_server_later": "Le serveur n'est pas connecté. L'opération sera envoyée au serveur ultérieurement.",
+  "Server_is_disconnected_Reconnecting": "Le serveur est déconnecté. Reconnexion...",
+  "Server_is_reconnected": "Le serveur est reconnecté.",
+  "Outline": "Contour",
+  "Headings_you_add_to_the_document_will_appear_here": "Les titres que vous ajoutez au document apparaissent ici",
   "Open_parent_folder": "Ouvrir dossier parent",
-  "Redo": "redo",
-  "Undo": "undo",
-  "Open_link": "Open link",
-  "Customize_the_number_of_rows_and_columns": "Customize the number of rows and columns",
-  "Rows": "Rows",
+  "Redo": "refaire",
+  "Undo": "annuler",
+  "Open_link": "Ouvrir le lien",
+  "Customize_the_number_of_rows_and_columns": "Personnaliser le nombre de lignes et de colonnes",
+  "Rows": "Lignes",
   "Columns": "Colonnes",
-  "Please_enter_title": "Please enter title",
-  "Please_enter_text": "Please enter text",
-  "Row(s)": "row(s)",
-  "Column(s)": "column(s)",
-  "Insert_below": "Insert below",
-  "Insert_above": "Insert above",
-  "Insert_on_the_right": "Insert on the right",
-  "Insert_on_the_left": "Insert on the left",
+  "Please_enter_title": "Veuillez saisir un titre",
+  "Please_enter_text": "Veuillez saisir un texte",
+  "Row(s)": "ligne(s)",
+  "Column(s)": "colonne(s)",
+  "Insert_below": "Insérer en-dessous",
+  "Insert_above": "Insérer au-dessus",
+  "Insert_on_the_right": "Insérer à droite",
+  "Insert_on_the_left": "Insérer à gauche",
   "Starred": "Favoris",
-  "Unstarred": "Unstarred",
+  "Unstarred": "Pas dans les favoris",
   "Star": "Favoris",
   "Unstar": "Supprimer",
-  "Auto_wrap": "Auto wrap",
-  "Add_comment": "Add comment",
-  "Delete_comment": "Delete comment",
-  "Delete_reply": "Delete reply",
-  "Are_you_sure_to_delete_this_comment": "Are you sure to delete this comment?",
-  "Are_you_sure_to_delete_this_reply": "Are you sure to delete this reply?",
-  "Enter_a_comment": "Enter a comment",
-  "Enter_a_reply": "Enter a reply",
-  "Reopen_discussion" : "Adding a reply will reopen this discussion",
+  "Auto_wrap": "Enveloppement automatique",
+  "Add_comment": "Ajouter un commentaire",
+  "Delete_comment": "Supprimer le commentaire",
+  "Delete_reply": "Supprimer la réponse",
+  "Are_you_sure_to_delete_this_comment": "Êtes-vous sûr de vouloir supprimer ce commentaire ?",
+  "Are_you_sure_to_delete_this_reply": "Êtes-vous sûr de vouloir supprimer cette réponse ?",
+  "Enter_a_comment": "Saisir un commentaire",
+  "Enter_a_reply": "Saisir une réponse",
+  "Reopen_discussion" : "L'ajout d'une réponse rouvrira la discussion.",
   "Confirm": "Confirmer",
-  "View_changes": "View changes",
-  "Revision": "Revision",
+  "View_changes": "Afficher les modifications",
+  "Revision": "Révision",
   "Error": "Erreur",
-  "Start_revise": "Start revise",
-  "Failed_to_execute_operation_on_server": "Failed to execute operation on server, the current operation has been withdrawn",
-  "Start_revise_tip": "Create a temporary document and modify on it, merge it back after reviewing changes",
-  "Load_doc_content_error": "Load doc content error",
-  "Sdoc_format_invalid": "The content of the document does not conform to the sdoc specification",
+  "Start_revise": "Commencer à réviser",
+  "Failed_to_execute_operation_on_server": "Échec de l'exécution de l'opération sur le serveur, l'opération en cours a été annulée.",
+  "Start_revise_tip": "Créer un document temporaire et le modifier, le fusionner à nouveau après avoir examiné les modifications.",
+  "Load_doc_content_error": "Erreur de chargement du contenu du document",
+  "Sdoc_format_invalid": "Le contenu du document n'est pas conforme à la spécification sdoc",
   "Draft": "Brouillon",
-  "Unmark_as_draft": "Unmark as draft",
-  "Background_color": "Background color",
-  "No_color": "No color",
-  "Standard_color": "Standard color",
-  "Recently_used": "Recently used",
-  "More_color": "More color",
-  "White": "White",
-  "Black": "Black",
-  "Blue_grey": "Blue_grey",
-  "Blue": "Blue",
-  "Sky_blue": "Sky_blue",
-  "Green": "Green",
-  "Red": "Red",
+  "Unmark_as_draft": "Ne pas marquer comme brouillon",
+  "Background_color": "Couleur d'arrière-plan",
+  "No_color": "Pas de couleur",
+  "Standard_color": "Couleur standard",
+  "Recently_used": "Récemment utilisée",
+  "More_color": "Plus de couleurs",
+  "White": "Blanc",
+  "Black": "Noir",
+  "Blue_grey": "Gris-bleu",
+  "Blue": "Bleu",
+  "Sky_blue": "Bleu-ciel",
+  "Green": "Vert",
+  "Red": "Rouge",
   "Orange": "Orange",
-  "Yellow": "Yellow",
-  "Purple": "Purple",
-  "Light_grey_x": "Light grey {{value}}",
-  "Dark_grey_x": "Dark grey {{value}}",
-  "Light_blue_grey_x": "Light blue grey {{value}}",
-  "Light_blue_x": "Light blue {{value}}",
-  "Light_sky_blue_x": "Light sky blue {{value}}",
-  "Light_green_x": "Light green {{value}}",
-  "Light_red_x": "Light red {{value}}",
-  "Light_orange_x": "Light orange {{value}}",
-  "Light_yellow_x": "Light yellow {{value}}",
-  "Light_purple_x": "Light purple {{value}}",
-  "Dark_blue_grey_x": "Dark blue grey {{value}}",
-  "Dark_blue_x": "Dark blue {{value}}",
-  "Dark_sky_blue_x": "Dark sky blue {{value}}",
-  "Dark_green_x": "Dark green {{value}}",
-  "Dark_red_x": "Dark red {{value}}",
-  "Dark_orange_x": "Dark orange {{value}}",
-  "Dark_yellow_x": "Dark yellow {{value}}",
-  "Dark_purple_x": "Dark purple {{value}}",
-  "Standard_dark_red": "Standard dark red",
-  "Standard_red": "Standard red",
-  "Standard_orange": "Standard orange",
-  "Standard_yellow": "Standard yellow",
-  "Standard_light_green": "Standard light green",
-  "Standard_green": "Standard green",
-  "Standard_light_blue": "Standard light blue",
-  "Standard_blue": "Standard blue",
-  "Standard_dark_blue": "Standard dark blue",
-  "Standard_purple": "Standard purple",
-  "Highlight_color": "Highlight",
-  "Font_color": "Font color",
+  "Yellow": "Jaune",
+  "Purple": "Pourpre",
+  "Light_grey_x": "Gris clair {{value}}",
+  "Dark_grey_x": "Gris foncé {{value}}",
+  "Light_blue_grey_x": "Gris bleu clair {{value}}",
+  "Light_blue_x": "Bleu clair {{value}}",
+  "Light_sky_blue_x": "Bleu ciel clair {{value}}",
+  "Light_green_x": "Vert clair {{value}}",
+  "Light_red_x": "Rouge clair {{value}}",
+  "Light_orange_x": "Orange clair {{value}}",
+  "Light_yellow_x": "Jaune clair {{value}}",
+  "Light_purple_x": "Pourpre clair {{value}}",
+  "Dark_blue_grey_x": "Gris bleu foncé {{value}}",
+  "Dark_blue_x": "Bleu foncé {{value}}",
+  "Dark_sky_blue_x": "Bleu ciel foncé {{value}}",
+  "Dark_green_x": "Vert foncé {{value}}",
+  "Dark_red_x": "Rouge foncé {{value}}",
+  "Dark_orange_x": "Orange foncé {{value}}",
+  "Dark_yellow_x": "Jaune foncé {{value}}",
+  "Dark_purple_x": "Pourpre foncé {{value}}",
+  "Standard_dark_red": "Rouge foncé standard",
+  "Standard_red": "Rouge standard",
+  "Standard_orange": "Orange standard",
+  "Standard_yellow": "Jaune standard",
+  "Standard_light_green": "Vert clair standard",
+  "Standard_green": "Vert standard",
+  "Standard_light_blue": "Bleu clair standard",
+  "Standard_blue": "Bleu standard",
+  "Standard_dark_blue": "Bleu foncé standard",
+  "Standard_purple": "Standard violet",
+  "Highlight_color": "Accentuer",
+  "Font_color": "Couleur de la police",
   "Default": "Défaut",
-  "No_revisions": "No revisions",
-  "1_revision": "1 revision",
-  "x_revisions": "{{count}} revisions",
-  "Creator": "Creator",
-  "Created_time": "Created time",
-  "Created_at": "Created at",
-  "Resolved_tip": "Mark as resolved and hide discussion",
-  "Search_language": "Search language",
-  "Sdoc_error_tip": "The document has errors and cannot be displayed. Please try to fix it automatically by clicking the button below.",
-  "Repair": "Repair",
-  "Font_size": "Font size",
-  "Increase_font_size": "Increase font size",
-  "Reduce_font_size": "Reduce font size",
+  "No_revisions": "Aucune révision",
+  "1_revision": "1 révision",
+  "x_revisions": "{{count}} révisions",
+  "Creator": "Créateur",
+  "Created_time": "Date de création",
+  "Created_at": "Créé à ",
+  "Resolved_tip": "Marquer comme résolu et masquer la discussion",
+  "Search_language": "Recherche de langue",
+  "Sdoc_error_tip": "Le document contient des erreurs et ne peut être affiché. Veuillez essayer de le corriger automatiquement en cliquant sur le bouton ci-dessous.",
+  "Repair": "Réparation",
+  "Font_size": "Taille de la police",
+  "Increase_font_size": "Augmenter la taille de la police",
+  "Reduce_font_size": "Diminuer la taille de la police",
   "Font": "Police",
-  "All_fonts": "All fonts",
-  "Default_font": "Default font",
-  "Pending_operations_exceed_limit": "There are multiple operations not synced to the server. Please check your network.",
-  "Recently_saved": "Recently saved",
-  "Sdoc_document" : "Sdoc document",
-  "Text_Link": "Text Link",
-  "Icon_and_text_Link": "Icon and text Link",
-  "Card": "Card",
-  "Select_sdoc_document": "Select sdoc document",
-  "Local_file": "Local file",
-  "Internal_server_exec_operations_error": "An exception occurred on the server, please refresh the page and try again",
-  "Failed_to_sync_with_server_operations": "Synchronization with the server failed, please refresh the page",
+  "All_fonts": "Toutes les polices",
+  "Default_font": "Police par défaut",
+  "Pending_operations_exceed_limit": "Plusieurs opérations n'ont pas été synchronisées avec le serveur. Veuillez vérifier votre réseau.",
+  "Recently_saved": "Récemment sauvegardé",
+  "Text_Link": "Lien texte",
+  "Icon_and_text_Link": "Icône et texte Lien",
+  "Card": "Carte",
+  "Select_sdoc_document": "Sélectionner le document sdoc",
+  "Select_file": "Select file",
+  "Local_file": "Fichier local",
+  "Internal_server_exec_operations_error": "Une exception s'est produite sur le serveur, veuillez rafraîchir la page et réessayer.",
+  "Failed_to_sync_with_server_operations": "La synchronisation avec le serveur a échoué, veuillez rafraîchir la page.",
   "Style": "Style",
-  "Insert": "Insert",
+  "Insert": "Insérer",
   "Image": "Image",
   "Table": "Tableau",
   "Link": "Lien",
-  "Transform_to": "Transform to",
-  "Last_modification": "Last modification",
-  "Next_modification": "Next modification",
+  "Transform_to": "Transformer en",
+  "Last_modification": "Dernière modification",
+  "Next_modification": "Modification suivante",
   "Changes": "Modifications",
-  "No_changes": "No changes",
+  "No_changes": "Pas de changement",
   "Title": "Titre",
-  "Subtitle": "Subtitle"
+  "Subtitle": "Sous-titre",
+  "Link_sdoc": "Lien sdoc",
+  "Link_file": "Link file"
 }
