--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -1,8 +1,8 @@
 {
   "Bold": "Полужирный",
   "Italic": "Курсив",
-  "Underline": "Подчеркивание",
-  "Strikethrough": "Зачеркнутый",
+  "Underline": "Подчёркивание",
+  "Strikethrough": "Зачёркнутый",
   "Superscript": "Надстрочный индекс",
   "Subscript": "Нижний индекс",
   "Inline_code": "Код",
@@ -48,7 +48,7 @@
   "Left": "Слева",
   "Center": "По центру",
   "Right": "Справа",
-  "File_saved": "Файл сохранен.",
+  "File_saved": "Файл сохранён.",
   "File_failed_to_save": "Не удалось сохранить файл.",
   "Back_to_parent_directory":"Вернуться в родительский каталог",
   "Edit": "Редактировать",
@@ -64,7 +64,7 @@
   "Password": "Пароль",
   "At_least_8_characters": "не менее 8 символов",
   "Password_again": "Подтвердите пароль",
-  "Add_auto_expiration": "Добавить авто истечение срока действия",
+  "Add_auto_expiration": "Добавить автоистечение срока действия",
   "Days": "дней",
   "Please_enter_password": "Пожалуйста, введите пароль",
   "Greater_than_or_equal_to": "Больше или равно",
@@ -72,13 +72,13 @@
   "Set_permission": "Установить разрешения",
   "Preview_and_download": "Предпросмотр и скачивание",
   "Preview_only": "Только предпросмотр",
-  "Please_enter_valid_days": "Пожалуйста, введите корректные дни",
+  "Please_enter_valid_days": "Пожалуйста, введите действительные дни",
   "Please_enter_a_non-negative_integer": "Пожалуйста, введите неотрицательное целое число",
   "Please_enter_days": "Пожалуйста, введите дни",
   "Password_is_too_short": "Пароль слишком короткий",
   "Passwords_do_not_match": "Пароли не совпадают",
-  "Return_to_wiki_page": "Вернуться на страницу Wiki",
-  "Insert_network_image": "Вставить удаленное изображение",
+  "Return_to_wiki_page": "Вернуться на страницу Вики",
+  "Insert_network_image": "Вставить удалённое изображение",
   "Upload_local_image": "Загрузить локальное изображение",
   "Add_link": "Добавить ссылку",
   "File_history": "История файла",
@@ -88,8 +88,8 @@
   "Local_draft": "Локальный черновик",
   "Use_draft": "Использовать черновик",
   "Delete_draft": "Удалить черновик",
-  "You_have_an_unsaved_draft_do_you_like_to_use_it": "У вас есть несохраненный черновик. Хотите использовать его?",
-  "Local_draft_saved": "Локальный черновик сохранен",
+  "You_have_an_unsaved_draft_do_you_like_to_use_it": "У вас есть несохранённый черновик. Хотите использовать его?",
+  "Local_draft_saved": "Локальный черновик сохранён",
   "New_draft": "Новый черновик",
   "View_draft": "Просмотр черновика",
   "Publish": "Опубликовать",
@@ -99,13 +99,13 @@
   "Comment": "Комментарий",
   "Comments": "Комментарии",
   "All_comments": "Все комментарии",
-  "Resolved_comments": "Разрешенные комментарии",
-  "Unresolved_comments": "Неразрешенные комментарии",
-  "Total_1_comment": "Всего 1 комментарий",
+  "Resolved_comments": "Разрешённые комментарии",
+  "Unresolved_comments": "Неразрешённые комментарии",
+  "Total_1_comment": "Всего один комментарий",
   "Total_count_comments": "Всего {{count}} комментариев",
   "Add_a_comment": "Добавить комментарий...",
   "No_comment_yet": "Комментариев пока нет.",
-  "Mark_as_Resolved": "Отметить как решенный",
+  "Mark_as_Resolved": "Отметить как решённый",
   "Resubmit": "Повторить отправку",
   "Resubmitted": "Отправлено повторно",
   "Ask_for_review": "Спросить отзыв",
@@ -115,11 +115,11 @@
   "Start_review": "Начать отзыв",
   "This_file_is_in_draft_stage": "Этот файл находится в стадии черновика.",
   "This_file_is_in_review_stage": "Этот файл находится на стадии проверки.",
-  "This_file_has_been_updated": "Этот файл был обновлен.",
+  "This_file_has_been_updated": "Этот файл был обновлён.",
   "Refresh": "Обновить",
   "Related_files": "Связанные файлы",
   "Related_file": "Связанный файл",
-  "No_tags": "Нет тегов",
+  "No_tags": "Нет меток",
   "Date": "Дата",
   "Participants": "Участники",
   "Meeting_note": "Заметка о встрече",
@@ -131,7 +131,7 @@
   "No_document_improvement_suggestion": "Нет предложений по улучшению документа",
   "Hide_side_panel": "Скрыть боковую панель",
   "Show_side_panel": "Показать боковую панель",
-  "Show_resolved_comments": "Показать разрешенные комментарии",
+  "Show_resolved_comments": "Показать разрешённые комментарии",
   "Update": "Изменить",
   "Width": "Ширина",
   "Height": "Высота",
@@ -140,7 +140,7 @@
   "Size": "Размер",
   "Location": "Местонахождение",
   "Last_update": "Последнее обновление",
-  "Tags": "Теги",
+  "Tags": "Метки",
   "Add_participants": "Добавить участников",
   "Clear_format": "Очистить формат",
   "MarkdownLint": {
@@ -210,7 +210,7 @@
         "shortcutData": {
           "Bold": "Полужирный",
           "Italic": "Курсив",
-          "Italic_Bold": "Курсив Полужирный",
+          "Italic_Bold": "Курсив полужирный",
           "Inline_code": "Встроенный код"
         }
       }, {
@@ -233,11 +233,11 @@
   "All_changes_saved": "Все изменения сохранены",
   "Saving": "Сохранение...",
   "Collaborators": "Участники",
-  "Online_members": "Онлайн-участники",
+  "Online_members": "Участники в сети",
   "Me": "мне",
-  "Server_is_not_connected_Operation_will_be_sent_to_server_later": "Сервер не подключен. Операция будет отправлена ​​на сервер позже.",
-  "Server_is_disconnected_Reconnecting": "Сервер отключен. Повторное подключение...",
-  "Server_is_reconnected": "Сервер переподключен.",
+  "Server_is_not_connected_Operation_will_be_sent_to_server_later": "Сервер не подключён. Операция будет отправлена ​​на сервер позже.",
+  "Server_is_disconnected_Reconnecting": "Сервер отключён. Повторное подключение...",
+  "Server_is_reconnected": "Сервер переподключён.",
   "Outline": "Контур",
   "Headings_you_add_to_the_document_will_appear_here": "Здесь появятся заголовки, которые вы добавите в документ.",
   "Open_parent_folder": "Открыть родительскую папку",
@@ -259,7 +259,7 @@
   "Unstarred": "Не отмечено",
   "Star": "Отметить",
   "Unstar": "Снять отметку",
-  "Auto_wrap": "Авто перенос",
+  "Auto_wrap": "Автоперенос",
   "Add_comment": "Добавить комментарий",
   "Delete_comment": "Удалить комментарий",
   "Delete_reply": "Удалить ответ",
@@ -267,7 +267,7 @@
   "Are_you_sure_to_delete_this_reply": "Вы уверены, что удалите этот ответ?",
   "Enter_a_comment": "Введите комментарий",
   "Enter_a_reply": "Введите ответ",
-  "Reopen_discussion" : "Добавление ответа приведет к возобновлению обсуждения.",
+  "Reopen_discussion" : "Добавление ответа приведёт к возобновлению обсуждения.",
   "Confirm": "Подтвердить",
   "View_changes": "Просмотр изменений",
   "Revision": "Пересмотр",
@@ -285,55 +285,55 @@
   "Recently_used": "Недавно использовано",
   "More_color": "Больше цвета",
   "White": "Белый",
-  "Black": "Черный",
+  "Black": "Чёрный",
   "Blue_grey": "Серо-голубой",
   "Blue": "Синий",
   "Sky_blue": "Лазурный",
-  "Green": "Зеленый",
+  "Green": "Зелёный",
   "Red": "Красный",
   "Orange": "Оранжевый",
-  "Yellow": "Желтый",
+  "Yellow": "Жёлтый",
   "Purple": "Фиолетовый",
   "Light_grey_x": "Светло-серый {{value}}",
-  "Dark_grey_x": "Темно-серый {{value}}",
+  "Dark_grey_x": "Тёмно-серый {{value}}",
   "Light_blue_grey_x": "Светло-синий серый {{value}}",
   "Light_blue_x": "Светло-синий {{value}}",
   "Light_sky_blue_x": "Светло-голубой {{value}}",
-  "Light_green_x": "Светло-зеленый {{value}}",
+  "Light_green_x": "Светло-зелёный {{value}}",
   "Light_red_x": "Светло-красный {{value}}",
   "Light_orange_x": "Светло-оранжевый {{value}}",
-  "Light_yellow_x": "Светло-желтый {{value}}",
+  "Light_yellow_x": "Светло-жёлтый {{value}}",
   "Light_purple_x": "Светло-фиолетовый {{value}}",
-  "Dark_blue_grey_x": "Темно-синий серый {{value}}",
-  "Dark_blue_x": "Темно-синий {{value}}",
-  "Dark_sky_blue_x": "Темно-голубой {{value}}",
-  "Dark_green_x": "Темно-зеленый {{value}}",
-  "Dark_red_x": "Темно-красный {{value}}",
-  "Dark_orange_x": "Темно-оранжевый {{value}}",
-  "Dark_yellow_x": "Темно-желтый {{value}}",
-  "Dark_purple_x": "Темно-фиолетовый {{value}}",
-  "Standard_dark_red": "Стандартный темно-красный",
+  "Dark_blue_grey_x": "Тёмно-синий серый {{value}}",
+  "Dark_blue_x": "Тёмно-синий {{value}}",
+  "Dark_sky_blue_x": "Тёмно-голубой {{value}}",
+  "Dark_green_x": "Тёмно-зелёный {{value}}",
+  "Dark_red_x": "Тёмно-красный {{value}}",
+  "Dark_orange_x": "Тёмно-оранжевый {{value}}",
+  "Dark_yellow_x": "Тёмно-жёлтый {{value}}",
+  "Dark_purple_x": "Тёмно-фиолетовый {{value}}",
+  "Standard_dark_red": "Стандартный тёмно-красный",
   "Standard_red": "Стандартный красный",
   "Standard_orange": "Стандартный оранжевый",
-  "Standard_yellow": "Стандартный желтый",
-  "Standard_light_green": "Стандартный светло-зеленый",
-  "Standard_green": "Стандартный зеленый",
+  "Standard_yellow": "Стандартный жёлтый",
+  "Standard_light_green": "Стандартный светло-зелёный",
+  "Standard_green": "Стандартный зелёный",
   "Standard_light_blue": "Стандартный светло-голубой",
   "Standard_blue": "Стандартный синий",
-  "Standard_dark_blue": "Стандартный темно-синий",
+  "Standard_dark_blue": "Стандартный тёмно-синий",
   "Standard_purple": "Стандартный фиолетовый",
   "Highlight_color": "Выделение",
   "Font_color": "Цвет шрифта",
   "Default": "По умолчанию",
   "No_revisions": "Нет редакций",
-  "1_revision": "1 редакция",
+  "1_revision": "Одна редакция",
   "x_revisions": "{{count}} редакций",
   "Creator": "Создатель ",
   "Created_time": "Время создания",
   "Created_at": "Создано",
-  "Resolved_tip": "Отметить как решенное и скрыть обсуждение",
+  "Resolved_tip": "Отметить как решённое и скрыть обсуждение",
   "Search_language": "Язык поиска",
-  "Sdoc_error_tip": "Документ содержит ошибки и не может быть отображен. Попробуйте исправить это автоматически, нажав кнопку ниже.",
+  "Sdoc_error_tip": "Документ содержит ошибки и не может быть отображён. Попробуйте исправить это автоматически, нажав кнопку ниже.",
   "Repair": "Исправление",
   "Font_size": "Размер шрифта",
   "Increase_font_size": "Увеличить размер шрифта",
@@ -341,12 +341,13 @@
   "Font": "Шрифт",
   "All_fonts": "Все шрифты",
   "Default_font": "Шрифт по умолчанию",
-  "Pending_operations_exceed_limit": "Несколько операций не синхронизированы с сервером. Проверьте вашу сеть.",
+  "Pending_operations_exceed_limit": "Несколько операций не синхронизированы с сервером. Проверьте подключение к сети.",
   "Recently_saved": "Недавно сохранено",
   "Text_Link": "Текстовая ссылка",
   "Icon_and_text_Link": "Значок и текстовая ссылка",
   "Card": "Карта",
   "Select_sdoc_document": "Выбрать документ sdoc",
+  "Select_file": "Select file",
   "Local_file": "Заблокировать файл",
   "Internal_server_exec_operations_error": "На сервере произошло исключение. Обновите страницу и повторите попытку",
   "Failed_to_sync_with_server_operations": "Не удалось синхронизироваться с сервером, обновите страницу.",
@@ -362,5 +363,6 @@
   "No_changes": "Без изменений",
   "Title": "Название",
   "Subtitle": "Подзаголовок",
-  "Link_sdoc": "Ссылка на sdoc"
+  "Link_sdoc": "Ссылка на sdoc",
+  "Link_file": "Link file"
 }
