--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -365,15 +365,17 @@
   "Subtitle": "Подзаголовок",
   "Link_sdoc": "Ссылка на sdoc",
   "Link_file": "Ссылка на файл",
-  "Keep_my_modification": "Keep my modification",
-  "Keep_other_modification": "Keep other's modification",
-  "Keep_both_modification": "Keep my modification",
-  "Tip": "Tip",
-  "Rebase_delete_no_change_revision_tip": "Revision has not made any change compared to original document. Do you want to delete this revision?",
-  "Has_been_replaced_tip": "Document content has been replaced. Please refresh the page.",
-  "Has_been_published_tip": "Revision has been published, Automatically jump to source content after {{ time }} seconds.",
-  "Has_conflict_before_publish_tip": "There are conflicts in the document, please resolve it before publishing!",
-  "Merge_tip": "There are conflicts in the documents. Do you want to merge them?",
-  "Has_conflict_before_view_changes_tip": "There are conflicts in the document. Please resolve the conflict before viewing the changes!",
-  "Has_been_removed_tip": "Document has been removed, please view other documents."
+  "Keep_my_modification": "Сохранить мою модификацию",
+  "Keep_other_modification": "Сохранить чужую модификацию",
+  "Keep_both_modification": "Сохранить мою модификацию",
+  "Tip": "Совет",
+  "Rebase_delete_no_change_revision_tip": "Редакция не внесла никаких изменений по сравнению с исходным документом. Вы хотите удалить эту редакцию?",
+  "Has_been_replaced_tip": "Содержимое документа было заменено. Обновите страницу.",
+  "Has_been_published_tip": "Версия опубликована. Автоматический переход к исходному контенту через {{ time }} секунд.",
+  "Has_conflict_before_publish_tip": "В документе есть конфликты, разрешите их перед публикацией!",
+  "Merge_tip": "В документах есть конфликты. Вы хотите объединить их?",
+  "Has_conflict_before_view_changes_tip": "В документе есть конфликты. Разрешите конфликт перед просмотром изменений!",
+  "Has_been_removed_tip": "Документ удален, посмотрите другие документы.",
+  "Checking": "Проверка...",
+  "Publishing": "Публикация..."
 }
