--- a/media/locales/ru/seafile-editor.json
+++ b/media/locales/ru/seafile-editor.json
@@ -47,7 +47,7 @@
   "left": "Слева",
   "center": "По центру",
   "right": "Справа",
-  "file_saved": "Файл сохранен.",
+  "file_saved": "Файл сохранён.",
   "file_failed_to_save": "Не удалось сохранить файл.",
   "star": "Добавить пометку",
   "unstar": "Удалить пометку",
@@ -65,7 +65,7 @@
   "password": "Пароль",
   "at_least_8_characters": "не менее 8 символов",
   "password_again": "Подтвердите пароль",
-  "add_auto_expiration": "Добавить авто истечение срока действия",
+  "add_auto_expiration": "Добавить автоистечение срока действия",
   "days": "дней",
   "please_enter_password": "Пожалуйста, введите пароль",
   "greater_than_or_equal_to": "Больше или равно",
@@ -73,13 +73,13 @@
   "set_permission": "Установить разрешения",
   "preview_and_download": "Предпросмотр и скачивание",
   "preview_only": "Только предпросмотр",
-  "please_enter_valid_days": "Пожалуйста, введите корректные дни",
+  "please_enter_valid_days": "Пожалуйста, введите действительные дни",
   "please_enter_a_non-negative_integer": "Пожалуйста, введите неотрицательное целое число",
   "please_enter_days": "Пожалуйста, введите дни",
   "password_is_too_short": "Пароль слишком короткий",
   "passwords_do_not_match": "Пароли не совпадают",
-  "return_to_wiki_page": "Вернуться на страницу Wiki",
-  "insert_network_image": "Вставить удаленное изображение",
+  "return_to_wiki_page": "Вернуться на страницу Вики",
+  "insert_network_image": "Вставить удалённое изображение",
   "upload_local_image": "Загрузить локальное изображение",
   "add_link": "Добавить ссылку",
   "file_history": "История файла",
@@ -89,8 +89,8 @@
   "local_draft": "Локальный черновик",
   "use_draft": "Использовать черновик",
   "delete_draft": "Удалить черновик",
-  "you_have_an_unsaved_draft_do_you_like_to_use_it": "У вас есть несохраненный черновик. Хотите использовать его?",
-  "local_draft_saved": "Локальный черновик сохранен",
+  "you_have_an_unsaved_draft_do_you_like_to_use_it": "У вас есть несохранённый черновик. Хотите использовать его?",
+  "local_draft_saved": "Локальный черновик сохранён",
   "new_draft": "Новый черновик",
   "view_draft": "Просмотр черновика",
   "publish": "Опубликовать",
@@ -99,7 +99,7 @@
   "comments": "Комментарии",
   "add_a_comment": "Добавить комментарий...",
   "no_comment_yet": "Комментариев пока нет.",
-  "Mark_as_Resolved": "Отметить как решенный",
+  "Mark_as_Resolved": "Отметить как решённый",
   "ask_for_review": "Спросить отзыв",
   "review_already_exists": "Отзыв уже существует",
   "view_review": "Просмотр отзыва",
@@ -107,11 +107,11 @@
   "start_review": "Начать отзыв",
   "this_file_is_in_draft_stage": "Этот файл находится в стадии черновика.",
   "this_file_is_in_review_stage": "Этот файл находится на стадии проверки.",
-  "this_file_has_been_updated": "Этот файл был обновлен.",
+  "this_file_has_been_updated": "Этот файл был обновлён.",
   "refresh": "Обновить",
   "related_files": "связанные файлы",
   "related_file": "связанный файл",
-  "no_tags": "Нет тегов",
+  "no_tags": "Нет меток",
   "Date": "Дата",
   "Participants": "Участники",
   "Meeting_note": "Заметка о встрече",
@@ -123,7 +123,7 @@
   "no_document_improvement_suggestion": "Нет предложений по улучшению документа",
   "Hide_side_panel": "Скрыть боковую панель",
   "Show_side_panel": "Показать боковую панель",
-  "Show_resolved_comments": "Показать разрешенные комментарии",
+  "Show_resolved_comments": "Показать разрешённые комментарии",
   "Update": "Изменить",
   "Width": "Ширина",
   "Height": "Высота",
@@ -132,7 +132,7 @@
   "Size": "Размер",
   "Location": "Местонахождение",
   "Last_Update": "Последнее обновление",
-  "Tags": "Теги",
+  "Tags": "Метки",
   "Related_Files": "Связанные файлы",
   "Add_participants": "Добавить участников",
   "markdownLint": {
@@ -202,7 +202,7 @@
         "shortcutData": {
           "Bold": "Полужирный",
           "Italic": "Курсив",
-          "Italic_Bold": "Курсив Полужирный",
+          "Italic_Bold": "Курсив полужирный",
           "Inline_code": "Встроенный код"
         }
       }, {
