--- a/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
@@ -367,7 +367,7 @@
   "Link_file": "文件链接",
   "Keep_my_modification": "保留我的更改",
   "Keep_other_modification": "保留其他的更改",
-  "Keep_both_modification": "保留我的更改",
+  "Keep_both_modification": "保留两者更改",
   "Tip": "提示",
   "Rebase_delete_no_change_revision_tip": "修订改没有更改，是否删除修订稿？",
   "Has_been_replaced_tip": "文档内容已经被替换，请刷新页面。",
@@ -375,5 +375,8 @@
   "Has_conflict_before_publish_tip": "文档有冲突，请解决冲突后再发布！",
   "Merge_tip": "文档有冲突，是否合并？",
   "Has_conflict_before_view_changes_tip": "文档有冲突，请解决冲突后再查看更改！",
-  "Has_been_removed_tip": "文档已经被删除，请查看其他文档"
+  "Has_been_removed_tip": "文档已经被删除，请查看其他文档",
+  "Revision_created": "已创建修订稿 {{id}}",
+  "Checking": "检查中...",
+  "Publishing": "发布中..."
 }
